fix: adjust bot padding to fix overflow

--- a/src/scss/components/cta.scss
+++ b/src/scss/components/cta.scss
@@ -2,7 +2,7 @@
 
 .cta {
 
-    padding: 0 rem(24) rem(94);
+    padding: 0 rem(24) rem(71);
 
     &__heading {
         margin-bottom: rem(16);
